# jurisai

./: CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
src/jurisai/: __init__.py  __main__.py
src/jurisai/api/: __init__.py  streamlit_app.py
src/jurisai/cli/: __init__.py  commands.py
src/jurisai/core/: __init__.py  app.py
src/jurisai/models/: __init__.py  document_processor.py  rag_chain.py
src/jurisai/utils/: __init__.py  log_config.py
tests/: __init__.py  test_app.py  test_basic.py  test_cli.py  test_log_config.py
