[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jurisai"
version = "0.1.0"
description = "JurisAI - AI-powered legal assistant"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "a13xh", email = "a13x.h.cc@gmail.com"}
]
dependencies = [
    "numpy",
    "pandas",
    "structlog",
    "rich",
    "streamlit",
    "langchain",
    "langchain-community",
    "langchain-experimental",
    "faiss-cpu",
    "sentence-transformers",
    "pdfplumber",
    "ollama",
]

[project.scripts]
jurisai = "src.jurisai.cli.commands:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true